# tux-4-genalpha

./: .clang-tidy  .gersemirc  .gitignore  .gitmodules  BUILD.adoc  CMakeLists.txt  CMakePresets.json  KNOWN-ISSUES.adoc  README.adoc
cmake/: cpm-stubs.cmake  package-lock.cmake  t4k_dependency_setup.cmake
cmake/modules/: CPM.cmake  CacheDir.cmake  t4k_provider.cmake
cmake/packaging/: macos-app.cmake  self-contained.cmake
cmake/packaging/macos-app/: Info.plist.in  build-dmg.cmake
cmake/toolchain/: MinGW-Win64.cmake
t4kcommon/: .clang-format  .gersemirc  .gitignore  CMakeLists.txt
t4kcommon/cmake/: t4k_commonConfig.cmake.in
t4kcommon/cmake/Modules/: Internationalization.cmake
t4kcommon/include/t4k/: common.h  compiler.h  gettext.h  path.h  visible_bell.h  volume.h
t4kcommon/src/: t4k_alphasort.h  t4k_audio.c  t4k_common.h  t4k_compiler.h  t4k_convert_utf.c  t4k_globals.h  t4k_linewrap.c  t4k_loaders.c  t4k_main.c  t4k_menu.c  t4k_path.c  t4k_pixels.c  t4k_replacements.c  t4k_scandir.h  t4k_sdl.c  t4k_test.c  t4k_throttle.c  t4k_tts.c  t4k_visible_bell.c  t4k_volume.c
t4kcommon/src/linebreak/: .clang-format  xsize.h
t4kcommon/src/tests/: .clang-format  main.c  test_public_functions.c
tuxmath/: .clang-format  .gersemirc  CMakeLists.txt
tuxmath/cmake-modules/: ConfigureChecks.cmake  ConfigureChecksIntl.cmake  FindIconv.cmake  FindMSGFMT.cmake  FindSDL_Pango.cmake  FindSDL_gfx.cmake  FindTux4Kids-common.cmake  T4K_Sugar.cmake
tuxmath/data/: CMakeLists.txt
tuxmath/data/menus/: main_menu.xml
tuxmath/doc/: CMakeLists.txt
tuxmath/macosx/: CMakeLists.txt
tuxmath/mingw/: SDL_win32_main.c  config.h  version.h
tuxmath/po/: CMakeLists.txt
tuxmath/src/: CMakeLists.txt  SDL_rotozoom.c  SDL_rotozoom.h  audio.c  campaign.c  campaign.h  comets.c  comets.h  comets_graphics.c  comets_graphics.h  compiler.h  credits.c  credits.h  draw_utils.c  draw_utils.h  exercise_mathcards.c  factoroids.c  factoroids.h  factoroids_graphics.c  factoroids_graphics.h  fileops.c  fileops.h  fileops_media.c  frame_counter.c  frame_counter.h  game.c  game.h  generate_lesson.c  globals.h  highscore.c  highscore.h  lessons.c  lessons.h  linewrap.c  linewrap.h  master_mathcards.c  mathcards.c  mathcards.h  menu.c  menu.h  (+25 more)
tuxtype/: .gitignore  CMakeLists.txt
tuxtype/cmake/Modules/: Internationalization.cmake
tuxtype/data/menus/: main_menu.xml
tuxtype/po/: ar.po  as.po  ast.po  be.po  ca.po  cs.po  da.po  de.po  ee.po  el.po  en.po  en@boldquot.po  en@quot.po  en_GB.po  en_US.po  es.po  eu.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  kn.po  ko.po  ln.po  lt.po  ml.po  ml_IN.po  nb.po  ne.po  nl.po  nn.po  or.po  pt.po  ro.po  ru.po  sv.po  (+10 more)
tuxtype/src/: SDL_extras.c  SDL_extras.h  alphabet.c  audio.c  braille.c  braille.h  compiler.h  convert_utf.c  editor.c  editor.h  funcs.h  game_keyboard.c  game_keyboard.h  globals.c  globals.h  hand_display.c  hand_display.h  input.c  input.h  input_braille.c  input_internal.h  input_methods.c  input_methods.h  input_typewriter.c  keyboard_display.c  keyboard_display.h  keyboard_input.c  keyboard_input.h  laser.c  laser.h  loaders.c  main.c  menu.c  menu.h  mysetenv.c  options.c  pause.c  pixels.c  pixels.h  playgame.c  (+15 more)
