cmake_minimum_required(VERSION 3.25)

# CMP0140: return(PROPAGATE ...) is used by vendored Internationalization.cmake
cmake_policy(SET CMP0140 NEW)

project(t4k_common
    VERSION 1.0.0
    DESCRIPTION "Tux4Kids common routines (SDL3 port)"
    HOMEPAGE_URL "https://github.com/tux4kids/t4kcommon"
    LANGUAGES C
)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

option(ENABLE_I18N "Build with gettext/i18n support" ON)
option(BUILD_TESTING "Build t4k_test smoke-test program" ON)

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
find_package(SDL3 REQUIRED CONFIG)
find_package(SDL3_image REQUIRED CONFIG)
find_package(SDL3_ttf REQUIRED CONFIG)
# NOTE: SDL3_mixer is intentionally NOT used in this initial port.
# Audio is stubbed in src/t4k_audio.c. See task #13 for the real port —
# SDL3_mixer is a complete API rewrite (MIX_Mixer/MIX_Audio/MIX_Track).

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBXML2 REQUIRED IMPORTED_TARGET libxml-2.0)
pkg_check_modules(LIBPNG REQUIRED IMPORTED_TARGET libpng)

# gettext/libintl: standalone on macOS (Homebrew), part of glibc on Linux
find_package(Intl REQUIRED)

# iconv: on macOS use libSystem's; CMake's FindIconv handles platform-specific bits
find_package(Iconv REQUIRED)

# ---------------------------------------------------------------------------
# Library
# ---------------------------------------------------------------------------
set(T4K_DATA_PREFIX "${CMAKE_INSTALL_FULL_DATADIR}/t4k_common"
    CACHE PATH "Runtime data directory baked into libt4k_common"
)

add_library(t4k_common SHARED
    src/t4k_audio.c
    src/t4k_convert_utf.c
    src/t4k_linewrap.c
    src/t4k_loaders.c
    src/t4k_main.c
    src/t4k_menu.c
    src/t4k_pixels.c
    src/t4k_replacements.c
    src/t4k_sdl.c
    src/t4k_throttle.c
    src/t4k_tts.c
    # bundled linebreak (was a separate convenience archive in autotools):
    src/linebreak/linebreak.c
    src/linebreak/unistr/u8-mbtouc.c
    src/linebreak/unistr/u8-mbtouc-aux.c
    src/linebreak/unistr/u8-mbtouc-unsafe.c
    src/linebreak/unistr/u8-mbtouc-unsafe-aux.c
    src/linebreak/unistr/u8-uctomb.c
    src/linebreak/unistr/u8-uctomb-aux.c
    src/linebreak/unistr/u16-mbtouc.c
    src/linebreak/unistr/u16-mbtouc-aux.c
    src/linebreak/unistr/u16-mbtouc-unsafe.c
    src/linebreak/unistr/u16-mbtouc-unsafe-aux.c
    src/linebreak/uniwidth/width.c
)
add_library(t4k_common::t4k_common ALIAS t4k_common)

# The bundled linebreak/*.c expects to #include <config.h> (autotools
# leftover; the macro flags it relied on are now defined via target_compile_
# definitions below). Generate an empty config.h in the build dir so the
# include resolves without needing autotools. .gitignore keeps the source
# tree clean of generated files.
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/config.h"
    "/* Generated by CMake — see CMakeLists.txt. Intentionally empty. */\n")

target_include_directories(t4k_common
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
    PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR}  # for generated config.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${CMAKE_CURRENT_SOURCE_DIR}/src/linebreak
)

target_compile_definitions(t4k_common PRIVATE
    COMMON_DATA_PREFIX="${T4K_DATA_PREFIX}"
    USE_T4K_PREFIX=1
    HAVE_LIBSDL_IMAGE=1
    HAVE_LIBSDL_TTF=1
    HAVE_LIBPNG=1
    HAVE_LIBXML2=1
    HAVE_SCANDIR=1
    HAVE_ALPHASORT=1
    HAVE_INLINE=1
    PACKAGE="${PROJECT_NAME}"
    PACKAGE_STRING="${PROJECT_NAME} ${PROJECT_VERSION}"
    VERSION="${PROJECT_VERSION}"
    LOCALEDIR="${CMAKE_INSTALL_FULL_LOCALEDIR}"
    # Bundled gnulib unistr feature macros (linebreak helper):
    GNULIB_UNISTR_U8_MBTOUC=1
    GNULIB_UNISTR_U8_MBTOUC_UNSAFE=1
    GNULIB_UNISTR_U16_MBTOUC=1
    GNULIB_UNISTR_U16_MBTOUC_UNSAFE=1
    GNULIB_UNISTR_U8_UCTOMB=1
)

# SDL3, SDL3_image are exposed by t4k_common.h → PUBLIC
# SDL3_ttf, libxml2, libpng, intl, iconv are implementation only → PRIVATE
target_link_libraries(t4k_common
    PUBLIC
        SDL3::SDL3
        SDL3_image::SDL3_image
    PRIVATE
        SDL3_ttf::SDL3_ttf
        PkgConfig::LIBXML2
        PkgConfig::LIBPNG
        Intl::Intl
        Iconv::Iconv
)

set_target_properties(t4k_common PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION 0
    PUBLIC_HEADER "src/t4k_common.h;src/t4k_alphasort.h;src/t4k_scandir.h"
)

if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(t4k_common PRIVATE -Wall -Wno-unused -Wno-deprecated-declarations)
endif()

# ---------------------------------------------------------------------------
# i18n (vendored framework from cmake/Modules/Internationalization.cmake)
# ---------------------------------------------------------------------------
if(ENABLE_I18N AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/po")
    include(Internationalization)
    file(GLOB _t4k_po "${CMAKE_CURRENT_SOURCE_DIR}/po/*.po")
    if(_t4k_po)
        i18n_targets(t4k_common PO_DIR "${CMAKE_CURRENT_SOURCE_DIR}/po")
    endif()
endif()

# ---------------------------------------------------------------------------
# Smoke-test program (the gate before tuxtype is touched, per task #6)
# ---------------------------------------------------------------------------
if(BUILD_TESTING)
    add_executable(t4k_test src/t4k_test.c)
    target_link_libraries(t4k_test PRIVATE t4k_common)
    target_compile_definitions(t4k_test PRIVATE
        VERSION="${PROJECT_VERSION}"
    )
endif()

# ---------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------
install(TARGETS t4k_common
    EXPORT t4k_common-targets
    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

if(BUILD_TESTING)
    install(TARGETS t4k_test RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

install(DIRECTORY data/images/menu/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/t4k_common/images/menu
    FILES_MATCHING PATTERN "*.png" PATTERN "*.svg"
)

install(EXPORT t4k_common-targets
    FILE t4k_common-targets.cmake
    NAMESPACE t4k_common::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
)

configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/t4k_commonConfig.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfig.cmake"
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
)
write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfigVersion.cmake"
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY SameMajorVersion
)
install(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfig.cmake"
    "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfigVersion.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
)
