cmake_minimum_required(VERSION 3.25)

# CMP0140: return(PROPAGATE ...) is used by vendored Internationalization.cmake
cmake_policy(SET CMP0140 NEW)

project(
    t4k_common
    VERSION 1.0.0
    DESCRIPTION "Tux4Kids common routines (SDL3 port)"
    HOMEPAGE_URL "https://github.com/tux4kids/t4kcommon"
    LANGUAGES C
)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
include(CMakeDependentOption)

# Bake $ORIGIN into the installed libt4k_common.so so it can find its
# private SDL3_ttf NEEDED dep co-located in lib/. Without this, RUNPATH
# from a downstream binary (tuxtype) doesn't propagate to indirectly
# loaded libs and ldd reports libSDL3_ttf.so.0 => not found.
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
if(APPLE)
    set(CMAKE_INSTALL_RPATH "@loader_path")
else()
    set(CMAKE_INSTALL_RPATH "$ORIGIN")
endif()

# I18N pulls libintl + libiconv. Force off when cross-compiling — mingw
# cross prefix doesn't ship either; building them from source for a
# Windows .exe nobody's translated isn't worth the yak-shaving.
cmake_dependent_option(
    ENABLE_I18N
    "Build with gettext/i18n support"
    ON
    "NOT CMAKE_CROSSCOMPILING"
    OFF
)
option(BUILD_TESTING "Build t4k_test smoke-test program" ON)
# Pulls librsvg + libpng (libpng is the rendered-surface cache backing
# the SVG loader). HAVE_RSVG branches in t4k_loaders.c haven't been
# audited against SDL3 — turning this on may need a port pass first.
option(ENABLE_SVG "Render theme art from SVG via librsvg" OFF)

# ---------------------------------------------------------------------------
# Dependencies — super-project's t4k_provider hooks find_package() so
# system / CPM / in-tree-target are all the same callsite.
# ---------------------------------------------------------------------------
find_package(SDL3 REQUIRED)
find_package(SDL3_image REQUIRED)
find_package(SDL3_mixer REQUIRED)
find_package(SDL3_ttf REQUIRED)
find_package(LibXml2 REQUIRED)

if(ENABLE_SVG)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(LIBRSVG REQUIRED IMPORTED_TARGET librsvg-2.0)
    pkg_check_modules(LIBPNG REQUIRED IMPORTED_TARGET libpng)
endif()

if(ENABLE_I18N)
    # gettext/libintl: standalone on macOS (Homebrew), part of glibc on Linux
    find_package(Intl REQUIRED)
    # iconv: on macOS use libSystem's; CMake's FindIconv handles platform-specific bits
    find_package(Iconv REQUIRED)
endif()

# ---------------------------------------------------------------------------
# Library
# ---------------------------------------------------------------------------
set(T4K_DATA_PREFIX
    "${CMAKE_INSTALL_FULL_DATADIR}/t4k_common"
    CACHE PATH
    "Runtime data directory baked into libt4k_common"
)

add_library(
    t4k_common
    SHARED
    src/t4k_audio.c
    src/t4k_convert_utf.c
    src/t4k_linewrap.c
    src/t4k_loaders.c
    src/t4k_main.c
    src/t4k_menu.c
    src/t4k_pixels.c
    src/t4k_sdl.c
    src/t4k_throttle.c
    src/t4k_tts.c
    # bundled linebreak (was a separate convenience archive in autotools):
    src/linebreak/linebreak.c
    src/linebreak/unistr/u8-mbtouc.c
    src/linebreak/unistr/u8-mbtouc-aux.c
    src/linebreak/unistr/u8-mbtouc-unsafe.c
    src/linebreak/unistr/u8-mbtouc-unsafe-aux.c
    src/linebreak/unistr/u8-uctomb.c
    src/linebreak/unistr/u8-uctomb-aux.c
    src/linebreak/unistr/u16-mbtouc.c
    src/linebreak/unistr/u16-mbtouc-aux.c
    src/linebreak/unistr/u16-mbtouc-unsafe.c
    src/linebreak/unistr/u16-mbtouc-unsafe-aux.c
    src/linebreak/uniwidth/width.c
)
add_library(t4k_common::t4k_common ALIAS t4k_common)

# The bundled linebreak/*.c expects to #include <config.h> (autotools
# leftover; the macro flags it relied on are now defined via target_compile_
# definitions below). Generate an empty config.h in the build dir so the
# include resolves without needing autotools. .gitignore keeps the source
# tree clean of generated files.
file(
    WRITE "${CMAKE_CURRENT_BINARY_DIR}/config.h"
    "/* Generated by CMake — see CMakeLists.txt. Intentionally empty. */\n"
)

target_include_directories(
    t4k_common
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
    PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR} # for generated config.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${CMAKE_CURRENT_SOURCE_DIR}/src/linebreak
)

target_compile_definitions(
    t4k_common
    PRIVATE
        COMMON_DATA_PREFIX="${T4K_DATA_PREFIX}"
        USE_T4K_PREFIX=1
        # Without ENABLE_NLS, gettext.h falls into its "disabled NLS" branch
        # where the _() macro is the identity function, so menu titles
        # rendered inside t4k_common never get translated even though the
        # consumer (tuxtype) bound the textdomain. Use real libintl here too.
        $<$<BOOL:${ENABLE_I18N}>:ENABLE_NLS=1>
        HAVE_LIBSDL_IMAGE=1
        HAVE_LIBSDL_MIXER=1
        HAVE_LIBSDL_TTF=1
        HAVE_LIBXML2=1
        HAVE_INLINE=1
        PACKAGE="${PROJECT_NAME}"
        PACKAGE_STRING="${PROJECT_NAME} ${PROJECT_VERSION}"
        VERSION="${PROJECT_VERSION}"
        LOCALEDIR="${CMAKE_INSTALL_FULL_LOCALEDIR}"
        # Bundled gnulib unistr feature macros (linebreak helper):
        GNULIB_UNISTR_U8_MBTOUC=1
        GNULIB_UNISTR_U8_MBTOUC_UNSAFE=1
        GNULIB_UNISTR_U16_MBTOUC=1
        GNULIB_UNISTR_U16_MBTOUC_UNSAFE=1
        GNULIB_UNISTR_U8_UCTOMB=1
)

# PUBLIC: consumers (tuxtype, tuxmath) inherit these transitively, so
# their own CMakeLists doesn't need to re-find SDL3 / Intl / Iconv.
# PRIVATE: pure implementation detail; symbols swallowed inside
# libt4k_common, no link-time exposure to consumers.
target_link_libraries(
    t4k_common
    PUBLIC SDL3::SDL3 SDL3_image::SDL3_image SDL3_mixer::SDL3_mixer
    PRIVATE SDL3_ttf::SDL3_ttf LibXml2::LibXml2
)

if(ENABLE_I18N)
    target_link_libraries(t4k_common PUBLIC Intl::Intl Iconv::Iconv)
endif()

if(ENABLE_SVG)
    target_compile_definitions(t4k_common PRIVATE HAVE_RSVG=1 HAVE_LIBPNG=1)
    target_link_libraries(
        t4k_common
        PRIVATE PkgConfig::LIBRSVG PkgConfig::LIBPNG
    )
endif()

set_target_properties(
    t4k_common
    PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 0
)

if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(t4k_common PRIVATE -Wall -Werror)
endif()
# Suppress paranoia warnings (gcc emits these aggressively; some flag any
# snprintf / strncpy whose output *could* truncate even when the caller
# handles it). glibc / openssl / libssh do the same. Detect each flag at
# configure time so we silently no-op on compilers that don't have it.
include(CheckCCompilerFlag)
foreach(_w format-truncation format-overflow stringop-truncation)
    string(MAKE_C_IDENTIFIER "_HAS_NO_${_w}" _var)
    check_c_compiler_flag("-Wno-${_w}" ${_var})
    if(${_var})
        target_compile_options(t4k_common PRIVATE "-Wno-${_w}")
    endif()
endforeach()

# ---------------------------------------------------------------------------
# i18n (vendored framework from cmake/Modules/Internationalization.cmake)
# ---------------------------------------------------------------------------
if(ENABLE_I18N AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/po")
    include(Internationalization)
    file(GLOB _t4k_po "${CMAKE_CURRENT_SOURCE_DIR}/po/*.po")
    if(_t4k_po)
        i18n_targets(t4k_common PO_DIR "${CMAKE_CURRENT_SOURCE_DIR}/po")
    endif()
endif()

# ---------------------------------------------------------------------------
# Smoke-test program (the gate before tuxtype is touched, per task #6)
# ---------------------------------------------------------------------------
if(BUILD_TESTING)
    add_executable(t4k_test src/t4k_test.c)
    target_link_libraries(t4k_test PRIVATE t4k_common)
    target_compile_definitions(t4k_test PRIVATE VERSION="${PROJECT_VERSION}")
endif()

# ---------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------
install(
    TARGETS t4k_common
    EXPORT t4k_common-targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(
    DIRECTORY include/t4k
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING
    PATTERN "*.h"
)

if(BUILD_TESTING)
    install(TARGETS t4k_test RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

install(
    DIRECTORY data/images/menu/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/t4k_common/images/menu
    FILES_MATCHING
    PATTERN "*.png"
    PATTERN "*.svg"
)

# Cmake config-package emission — for downstream find_package(t4k_common)
# consumers. Skip when any of our PUBLIC deps came from CPM (in-tree
# add_subdirectory targets like SDL3-shared aren't in any export set,
# so the install(EXPORT) chokes on them). The Windows cross-compile
# build also doesn't ship a development-package layout.
set(_t4k_inhibit_export FALSE)
foreach(
    _t
    IN
    ITEMS SDL3-shared SDL3_image-shared SDL3_ttf-shared SDL3_mixer-shared
)
    if(TARGET ${_t})
        set(_t4k_inhibit_export TRUE)
        break()
    endif()
endforeach()
if(NOT CMAKE_CROSSCOMPILING AND NOT _t4k_inhibit_export)
    install(
        EXPORT t4k_common-targets
        FILE t4k_common-targets.cmake
        NAMESPACE t4k_common::
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
    )

    configure_package_config_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/cmake/t4k_commonConfig.cmake.in"
        "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfig.cmake"
        INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
    )
    write_basic_package_version_file(
        "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfigVersion.cmake"
        VERSION ${PROJECT_VERSION}
        COMPATIBILITY SameMajorVersion
    )
    install(
        FILES
            "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfig.cmake"
            "${CMAKE_CURRENT_BINARY_DIR}/t4k_commonConfigVersion.cmake"
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/t4k_common
    )
endif()
